Thu Jun 11 15:16:01 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/arch/opensplice/SimpleExample/ModelDDSData_Base.mpc:
        * examples/arch/opensplice/SimpleExample/OpenSplice_ModelDDSDataC.h:
        * examples/arch/opensplice/SimpleExample/OpenSplice_ModelDDSDataC.cpp:
        * examples/arch/opensplice/SimpleExample/SimpleComponent_Base.mpc:
        * examples/arch/opensplice/SimpleExample/SimpleExample.mwc:

          . Re-generated files directly from the model.

Thu Jun 11 14:30:42 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/arch/opensplice/SimpleExample/ModelDDSData_Base.mpc:

          . Testing the new project file for OpenSplice.

Wed Jun 10 04:07:09 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ciao/CIAO_Generators.cpp:

          . Improved the build process.

Wed Jun 10 03:49:38 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Impl_Generator_T.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Impl_Graph_T.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Component_Implementation.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ciao/CIAO_Generators.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Project_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Header_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Workspace_Generator.cpp:

          . Improved the build process for TCP/IP.

          . The *node* in the implementation graph now maps to the
            actual monolithic implementation in the model.

        * cuts/arch/tcpip/TCPIP_ORB.h:

          . Removed unnecessary code.

        * performance-tests/DOA-2009/CORBA/AnyTest.idl: