@@ -1,3 +1,11 @@
+Thu Jun 11 15:20:35 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
+
+        * examples/arch/opensplice/SimpleExample/SimpleComponent_Basic_Impl.h:
+        * examples/arch/opensplice/SimpleExample/SimpleComponent_Basic_Impl.cpp:
+        * examples/arch/opensplice/SimpleExample/SimpleComponent_Basic_Impl.mpc:
+
+          . Added missing files.
+
 Thu Jun 11 15:16:01 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
 
         * examples/arch/opensplice/SimpleExample/ModelDDSData_Base.mpc:
